examples/c/error-codes/violates-constraint/nonfatal/CV-CDE2-bad-static.output
CV-CDE2-bad-static.c:4:10: warning: ISO C restricts enumerator values to range of 'int' (4294967295 is too large) [-Wpedantic]
enum e1 {a = 0xffffffff};
         ^   ~~~~~~~~~~
CV-CDE2-bad-static.c:5:26: warning: overflow in enumeration value
enum e2 {x = 0x7fffffff, y, z};
                         ^
2 warnings generated.
CV-CDE2-bad-static.c:4:10: error: Enum initializer outside the range representable by int.

    Constraint violation (CV-CDE2):
        see C11 section 6.7.2.2:2 http://rvdoc.org/C11/6.7.2.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-CDE2-bad-static.c:4:10: warning: Conversion to signed integer outside the range that can be represented.

    Implementation defined behavior (IMPL-CCV2):
        see C11 section 6.3.1.3:3 http://rvdoc.org/C11/6.3.1.3
        see C11 section J.3.5:1 item 4 http://rvdoc.org/C11/J.3.5
        see CERT-C section INT31-C http://rvdoc.org/CERT-C/INT31-C

CV-CDE2-bad-static.c:5:26: error: Enum initializer outside the range representable by int.

    Constraint violation (CV-CDE2):
        see C11 section 6.7.2.2:2 http://rvdoc.org/C11/6.7.2.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-CDE2-bad-static.c:5:26: warning: Conversion to signed integer outside the range that can be represented.

    Implementation defined behavior (IMPL-CCV2):
        see C11 section 6.3.1.3:3 http://rvdoc.org/C11/6.3.1.3
        see C11 section J.3.5:1 item 4 http://rvdoc.org/C11/J.3.5
        see CERT-C section INT31-C http://rvdoc.org/CERT-C/INT31-C

CV-CDE2-bad-static.c:5:29: error: Enum initializer outside the range representable by int.

    Constraint violation (CV-CDE2):
        see C11 section 6.7.2.2:2 http://rvdoc.org/C11/6.7.2.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-CDE2-bad-static.c:5:29: warning: Conversion to signed integer outside the range that can be represented.

    Implementation defined behavior (IMPL-CCV2):
        see C11 section 6.3.1.3:3 http://rvdoc.org/C11/6.3.1.3
        see C11 section J.3.5:1 item 4 http://rvdoc.org/C11/J.3.5
        see CERT-C section INT31-C http://rvdoc.org/CERT-C/INT31-C

